--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <form action="sender.php" method="post">
+    <form action="sender.php" method="get">
         <input type="text" class="name" name="name" placeholder="Имя" required>
         <input type="text" name="surname" placeholder="Фамилия" required>
         <input type="text" class="phone" name="phone" placeholder="Телефон">
