--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <title>Form</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="js/jquery.maskedinput.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <form action="sender.php" method="get">
+    <form action="http://formspree.io/libenk096@gmail.com" method="post">
         <input type="text" class="name" name="name" placeholder="Имя" required>
         <input type="text" name="surname" placeholder="Фамилия" required>
         <input type="text" class="phone" name="phone" placeholder="Телефон">
