--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Form</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="js/jquery.maskedinput.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -18,7 +14,7 @@
         <input type="text" class="phone" name="phone" placeholder="Телефон">
         <input type="email" name="email" placeholder="Email" required>
         <textarea name="text" id="" cols="30" rows="10" placeholder="Введите текст"></textarea>
-        <button type="button" class="send-form">Отправить форму</button>
+        <input type="submit" >Отправить форму</input>
         <div class="status"></div>
     </form>
     
