--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 
 <body>
-    <form action="http://formspree.io/libenk096@gmail.com" method="post">
+    <form action="http://formspree.io/libenko96@gmail.com">
         <input type="text" class="name" name="name" placeholder="Имя" required>
         <input type="text" name="surname" placeholder="Фамилия" required>
         <input type="text" class="phone" name="phone" placeholder="Телефон">
         <input type="email" name="email" placeholder="Email" required>
         <textarea name="text" id="" cols="30" rows="10" placeholder="Введите текст"></textarea>
-        <input type="submit" >Отправить форму</input>
-        <div class="status"></div>
+        <input type="submit" value="Отправить"/>
     </form>
     
     
