--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="http://formspree.io/libenko96@gmail.com">
+    <form action="https://formspree.io/f/mwkzeggr/libenko96@gmail.com" method="POST">
         <input type="text" class="name" name="name" placeholder="Имя" required>
         <input type="text" name="surname" placeholder="Фамилия" required>
         <input type="text" class="phone" name="phone" placeholder="Телефон">
