--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="https://formspree.io/f/mwkzeggr/libenko96@gmail.com" method="POST">
+    <form action="https://formsubmit.co/4d96215c51b73481970d42e0cd23c76d" method="POST">
         <input type="text" class="name" name="name" placeholder="Имя" required>
         <input type="text" name="surname" placeholder="Фамилия" required>
         <input type="text" class="phone" name="phone" placeholder="Телефон">
@@ -16,8 +16,7 @@
         <textarea name="text" id="" cols="30" rows="10" placeholder="Введите текст"></textarea>
         <input type="submit" value="Отправить"/>
     </form>
-    
-    
+
 </body>
 
 </html>
